crates/frontend/samples/test7.out
error: malformed parameter for trait parameter
   ┌─ crates/frontend/samples/test7.fir:47:29
   │
47 │         type Bar: Foo<Bar = (Self,)>;
   │                             ^^^^^^^
